2018-12-03  Ben Elliston  <bje@gnu.org>

	* Makefile.am (TEXINFO_TEX): Set to doc/texinfo.tex.
	(EXTRA_DIST): Add doc/texinfo.tex. Setting TEXINFO_TEX otherwise
	prevents the distribution of the overridden texinfo.tex.
	* Makefile.in: Regenerate.
	* texinfo.tex: Move from here ..
	* doc/texinfo.tex: .. to here.

2018-12-03  Ben Elliston  <bje@gnu.org>

	* lib/framework.exp (isremote): Add verbose message.

2018-12-02  Ben Elliston  <bje@gnu.org>

	* lib/framework.exp (isremote): Pass $board to is_remote.

2018-12-02  Ben Elliston  <bje@gnu.org>

	* doc/fdl.texi: New.
	* doc/dejagnu.texi (Variable Index): New.
	Add more concept index entries.
	(GNU Free Documentation License): New appendix.

2018-12-02  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi (Procedure Index): New. Add Texinfo function
	index (@findex) entries for every built-in procedure.

2018-12-02  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi: Start an index.

2018-12-02  Ben Elliston  <bje@gnu.org>

	* doc/version.texi: New.

2018-12-02  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi: Add title page and frontmatter. Include
	version.texi.
	* Makefile.in: Regenerate.
	* mdate-sh: Installed by automake --add-missing.

2018-12-02  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi (diff procedure): Tidy up this node.

2018-12-02  Jacob Bachmeyer  <jcb62281@gmail.com>

	* runtest.exp (hex): Remove useless test before setting.
	(decimal): Likewise.

2018-12-02  Jacob Bachmeyer  <jcb62281@gmail.com>

	* doc/dejagnu.texi (Invoking runtest): Document new --local_init
	and --global_init command line options.
	* doc/runtest.1: Likewise.

	* runtest.exp: Remove useless tests before setting default values
	for variables: all_flag, binpath, debug, options, outdir, reboot,
	tracelevel, verbose, log_dialog.  They are set before loading any
	files or parsing the command line.

	* runtest.exp: Add options --local_init and --global_init for
	selecting alternate testsuite configuration files.
